@@ -54,12 +54,16 @@ gdb_test "break create_large" \
          "Breakpoint \[0-9\]+ at.*: file .*pck.adb, line \[0-9\]+." \
          "insert breakpoint in create_large"
 
+gdb_test "break create_small_float_vector" \
+         "Breakpoint \[0-9\]+ at.*: file .*pck.adb, line \[0-9\]+." \
+         "insert breakpoint in create_small_float_vector"
+
 # Then continue until reaching the first breakpoint inside Create_Small,
 # and then do a "finish".
 
 gdb_test "cont" \
          "Breakpoint \[0-9\]+, pck.create_small \\(\\).*" \
-         "Continuing to Create.Small"
+         "Continuing to Create_Small"
 
 gdb_test "finish" \
          "Value returned is \\\$\[0-9\]+ = \\(1, 1\\)" \
@@ -70,7 +74,7 @@ gdb_test "finish" \
 
 gdb_test "cont" \
          "Breakpoint \[0-9\]+, pck.create_large \\(\\).*" \
-         "Continuing to Create.Large"
+         "Continuing to Create_Large"
 
 # On hppa32, the value returned is too large to be returned via a register.
 # Instead, it is returned using the struct convention, and the debugger
@@ -83,4 +87,15 @@ if { ! [istarget "hppa*64*-*-*"] } then {
 gdb_test "finish" \
          "Value returned is \\\$\[0-9\]+ = \\(2, 2, 2, 2\\)" \
          "value printed by finish of Create_Large"
+
+# Now continue until reaching the third breakpoint, and then do another
+# "finish" again.
+
+gdb_test "cont" \
+         "Breakpoint \[0-9\]+, pck.create_small_float_vector \\(\\).*" \
+         "Continuing to Create_Small_Float_Vector"
+
+gdb_test "finish" \
+         "Value returned is \\\$\[0-9\]+ = \\(4.25, 4.25\\)" \
+         "value printed by finish of Create_Small_Float_Vector"
 
