@@ -1,3 +1,15 @@
+2006-12-27  Joel Brobecker  <brobecker@adacore.com>
+
+	* gdb.ada/array_return/pck.ads (Small_Float_Vector): New type.
+	(Create_Small_Float_Vector): New function.
+	* gdb.ada/array_return/pck.adb (Create_Small_Float_Vector): Add
+	function body.
+	* gdb.ada/array_return/p.adb: Use new type and function from
+	package Pck.
+	* gdb.ada/array_return.exp: Add a test verifying that GDB is
+	able to print the value returned by a function returning an
+	array of float.
+
 2006-12-20  Joel Brobecker  <brobecker@adacore.com>
 
 	* gdb.arch/i386-prologue.exp: Remove calls to setup_kfail.
